update-manager (1:0.111.7) jaunty; urgency=low

  * DistUpgrade/ReleaseAnnouncement:
    - updated for the final release

 --

update-manager (1:0.111.6) jaunty; urgency=low

  * UpdateManager/UpdateManager.py:
    - fix crash in free space check (LP: #362066)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 16 Apr 2009 11:07:01 +0200

update-manager (1:0.111.5) jaunty; urgency=low

  * DistUpgrade/DistUpgradeQuirks.py:
    - do not crash when patch is not installed (LP: #361194)
  * DistUpgrade/DistUpgradeCache.py:
    - more debug output

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 15 Apr 2009 14:59:35 +0200

update-manager (1:0.111.4) jaunty; urgency=low

  * DistUpgrade/DistUpgradeViewKDE.py:
    - make the pyqt4 logger less verbose
  * DistUpgrade/DistUpgradeController.py:
    - deal with pre-configure errors more cleanly (LP: #356781)
  * DistUpgrade/DistUpgradeMain.py:
    - fix error when the backup log dir already exists
  * DistUpgrade/DistUpgrade.cfg:
    - stop enabling apport
  * DistUpgrade/DevelReleaseAnnouncement:
    - update text for the release candidate
  * po/*.po:
    - translation updates from rosetta

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 08 Apr 2009 11:09:25 +0200

update-manager (1:0.111.3) jaunty; urgency=low

  * DistUpgrade/DistUpgradeQuirks.py:
    - cleanup the quirks handling for the StartUgrade
      phase and move the code in here
    - apply patch for install-docs if the user can not install
      the fix from {hardy,intrepid}-proposed

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 07 Apr 2009 18:59:43 +0200

update-manager (1:0.111.2) jaunty; urgency=low

  * UpdateManager/Core/MyCache.py:
    - when calculating what category a update should be put in,
      make sure that candidate versions for "other updates" always
      end up there
    - do not try to get changelogs for packages that do not have
      a ubuntu origin (LP: #354740)
  * DistUpgrade/removal_blacklist.cfg: